--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
     cache-names: redis-cache
   data:
     redis:
-      host: ${REDIS_HOST}
+      host: localhost
       port: 6379
       password: ${REDIS_PASSWORD}
   datasource:
@@ -24,10 +24,6 @@ spring:
     enabled: true
     default-schema: tasklist
 
-
-mybatis:
-  mapper-locations: classpath:mybatis/mapper/*.xml
-
 security:
   jwt:
     secret: ${JWT_SECRET}
@@ -36,3 +32,9 @@ security:
 
 springdoc:
   override-with-generic-response: false
+
+minio:
+  bucket: ${MINIO_BUCKET}
+  url: ${MINIO_URL}
+  accessKey: ${MINIO_ACCESS_KEY}
+  secretKey: ${MINIO_SECRET_KEY}
